add E2EE support
closes #227